Fix text wrap in tweet box and clearing of textbox

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -89,6 +89,9 @@ form {
   margin: 5px;
   padding: 10px;
   padding-bottom: 15px;
+  word-wrap: relative;
+  overflow-wrap: break-word;
+ 
 }
 
 .tweet-container-bottom {
